flux/apps/ai/vane/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vane
  namespace: vane
  labels:
    app: vane
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  selector:
    matchLabels:
      app: vane
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: vane
    spec:
      automountServiceAccountToken: false
      containers:
        - name: vane
          image: docker.io/itzcrazykns1337/vane@sha256:fa44be0d3aa1e234e6464741bd6924c9a7a950351f214a71f6d6d9d741df5db3 # {"$imagepolicy": "flux-system:vane-policy"}
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: vane-data
              mountPath: /home/vane/data
              readOnly: false
          resources:
            requests:
              cpu: 200m
              memory: 128M
            limits:
              cpu: 1000m
              memory: 2G
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata: 
        name: vane-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: longhorn
