flux/apps/ai/vane/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  vane
  namespace: vane
spec:
  selector:
    app:  vane
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
